resources/kubernetes/deploy-dce-msr-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dce-msr-frontend
  name: dce-msr-frontend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 0
  selector:
    matchLabels:
      app: dce-msr-frontend
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: dce-msr-frontend
    spec:
      containers:
        - image: 131539360861.dkr.ecr.eu-west-1.amazonaws.com/dce-msr-frontend:latest
          imagePullPolicy: Always
          name: msr
          ports:
            - containerPort: 5543
              name: https
              protocol: TCP
            - containerPort: 9999
              name: diag
              protocol: TCP
            - containerPort: 5555
              name: http
              protocol: TCP
          volumeMounts:
            - name: microservicesruntime-license
              mountPath: /opt/softwareag/IntegrationServer/config/licenseKey.xml
              subPath:   licenseKey.xml
              readOnly:  true
            - name: application-properties
              mountPath: /opt/softwareag/IntegrationServer/application.properties
              subPath:   application.properties
              readOnly:  true
            - name: secrets
              mountPath: /etc/secrets
          resources:
            requests:
              cpu: 300m
              memory: 1000Mi
            limits:
              cpu: 1500m
              memory: 1000Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 5555
              scheme: HTTP
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /health
              port: 5555
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 1
            failureThreshold: 90
      imagePullSecrets:
      - name: ecrregcred
      volumes:
        - name: secrets
          secret:
            secretName: environment-secret
        - name: microservicesruntime-license
          secret:
            secretName: licenses
            defaultMode: 0666
            items:
            - key:  msr-license
              path: licenseKey.xml
        - name: application-properties
          configMap:
            name: dce-msr-frontend
            items:
            - key:  application.properties
              path: application.properties
