resources/kubernetes/deploy-msr-frontend-mcgw.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: msr-frontend
  name: msr-frontend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 0
  selector:
    matchLabels:
      app: msr-frontend
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: msr-frontend
    spec:
      containers:
        - name: microgateway
          image: sagcr.azurecr.io/microgateway:10.15
          imagePullPolicy: Always
          ports:
          - name: metrics
            containerPort: 9090
          resources:
            requests:
              cpu: 300m
              memory: 300Mi
            limits:
              cpu: 750m
              memory: 500Mi
          volumeMounts:
            - name: microgateway-license
              mountPath: /opt/softwareag/Microgateway/config/license.xml
              subPath:   license.xml
              readOnly:  true
          livenessProbe:
            tcpSocket:
              port: 9090
            initialDelaySeconds: 60
            periodSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 9090
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 10
        - image: staillansag/msr-frontend:latest
          imagePullPolicy: Always
          name: msr
          ports:
            - containerPort: 5543
              name: https
              protocol: TCP
            - containerPort: 9999
              name: diag
              protocol: TCP
            - containerPort: 5555
              name: http
              protocol: TCP
            - containerPort: 5555
              name: metrics
              protocol: TCP
          volumeMounts:
            - name: microservicesruntime-license
              mountPath: /opt/softwareag/IntegrationServer/config/licenseKey.xml
              subPath:   licenseKey.xml
              readOnly:  true
            - name: application-properties
              mountPath: /opt/softwareag/IntegrationServer/application.properties
              subPath:   application.properties
              readOnly:  true
            - name: secrets
              mountPath: /etc/secrets
          resources:
            requests:
              cpu: 300m
              memory: 1000Mi
            limits:
              cpu: 750m
              memory: 1000Mi
          livenessProbe:
            tcpSocket:
              port: 5555
            failureThreshold: 3
            initialDelaySeconds: 180
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            tcpSocket:
              port: 5555
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 30
      volumes:
        - name: secrets
          secret:
            secretName: environment-secret
        - name: microservicesruntime-license
          secret:
            secretName: licenses
            defaultMode: 0666
            items:
            - key:  msr-license
              path: licenseKey.xml
        - name: microgateway-license
          secret:
            secretName: licenses
            defaultMode: 0666
            items:
            - key:  mcgw-license
              path: license.xml
        - name: application-properties
          configMap:
            name: msr-frontend
            items:
            - key:  application.properties
              path: application.properties
      imagePullSecrets:
      - name: sagregcred
