resources/kubernetes/service-msr-frontend-mcgw.yaml
apiVersion: v1
kind: Service
metadata:
  name: msr-frontend
  labels:
    name: msr-frontend
    app: msr-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9090
    name: http
  - port: 443
    targetPort: 9093
    name: https
  selector:
    app: msr-frontend
