resources/kubernetes/33_ingress-msr-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msr-dce-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: msr-dce-frontend
            port:
              number: 443
