resources/kubernetes/ingress-dce-msr-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dce-msr-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dce-msr-frontend
            port:
              number: 443
