resources/kubernetes/ingress-msr-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msr-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "msr-frontend.sttlab.eu"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: msr-frontend
            port: 
              number: 443
  tls:
  - hosts: 
    - msr-frontend.sttlab.eu
    secretName: aks-tls
